force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__AccumulatedIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccumulatedIncentives__c</fullName>
    <formula>clofor_com_cfs__JanGrossIncentives__c +
clofor_com_cfs__FebGrossIncentives__c +
clofor_com_cfs__MarGrossIncentives__c +
clofor_com_cfs__AprGrossIncentives__c +
clofor_com_cfs__MayGrossIncentives__c +
clofor_com_cfs__JunGrossIncentives__c +
clofor_com_cfs__JulGrossIncentives__c +
clofor_com_cfs__AugGrossIncentives__c +
clofor_com_cfs__SepGrossIncentives__c +
clofor_com_cfs__OctGrossIncentives__c +
clofor_com_cfs__NovGrossIncentives__c +
clofor_com_cfs__DecGrossIncentives__c</formula>
    <inlineHelpText>Total Sum of Gross Incentives from Jan to Dec.</inlineHelpText>
    <label>ACCUMULATED INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>