force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__AllocatedMonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AllocatedMonthlyTarget__c</fullName>
    <label>ALLOCATED MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>