force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__AprGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AprGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__AprPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__AprBonusIncentiveRate__c</formula>
    <inlineHelpText>Apr Gross Incentives = Apr Bonus &amp; Incentives Rate*(Apr Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>APR GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>