force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__AugGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AugGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__AugPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__AugBonusIncentiveRate__c</formula>
    <inlineHelpText>Aug Gross Incentives = Aug Bonus &amp; Incentives Rate*(Aug Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>AUG GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>