force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__BonusIncentiveName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BonusIncentiveName__c</fullName>
    <label>BONUS &amp; INCENTIVE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>