force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__CaculationFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CaculationFormula__c</fullName>
    <label>CALCULATION FORMULA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__IncentiveFormula</valueSetName>
    </valueSet>
</CustomField>