force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__DataUploadMethod__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DataUploadMethod__c</fullName>
    <label>DATA UPDATE METHOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DataUpdateMethod</valueSetName>
    </valueSet>
</CustomField>