force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__DecGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DecGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__DecPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__DecBonusIncentiveRate__c</formula>
    <inlineHelpText>Dec Gross Incentives = Dec Bonus &amp; Incentives Rate*(Dec Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>DEC GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>