force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__FebAchievement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FebAchievement__c</fullName>
    <formula>clofor_com_cfs__IndividualPerformanceID__r.clofor_com_cfs__MARAchievement__c</formula>
    <label>FEB ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>