force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__FebGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FebGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__FebPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__FebBonusIncentiveRate__c</formula>
    <inlineHelpText>Feb Gross Incentives = Feb Bonus &amp; Incentives Rate*(Feb Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>FEB GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>