force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__IncentivesStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IncentivesStartDate__c</fullName>
    <label>INCENTIVES START DATE</label>
    <type>Date</type>
</CustomField>