force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__IndividualPerformanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IndividualPerformanceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INDIVIDUAL PERFORMANCE ID</label>
    <referenceTo>clofor_com_cfs__IndividualPerformance__c</referenceTo>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>