force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__JanGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JanGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__JanPerformance__c -  clofor_com_cfs__MinimumAmountForIncentive__c ) *  clofor_com_cfs__JanBonusIncentiveRate__c</formula>
    <inlineHelpText>Jan Gross Incentives = Jan Bonus &amp; Incentives Rate*(Jan Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>JAN GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>