force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__JulGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JulGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__JulPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__JulBonusIncentiveRate__c</formula>
    <inlineHelpText>Jul Gross Incentives = Jul Bonus &amp; Incentives Rate*(Jul Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>JUL GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>