force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__MarAchievement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MarAchievement__c</fullName>
    <formula>clofor_com_cfs__IndividualPerformanceID__r.clofor_com_cfs__MAYAchievement__c</formula>
    <label>MAR ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>