force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__MarBonusIncentiveRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MarBonusIncentiveRate__c</fullName>
    <label>MAR BONUS &amp; INCENTIVES RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>