force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__MayGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MayGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__MayPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__MayBonusIncentiveRate__c</formula>
    <inlineHelpText>May Gross Incentives = May Bonus &amp; Incentives Rate*(May Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>MAY GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>