force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__NovPerformance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NovPerformance__c</fullName>
    <formula>clofor_com_cfs__IndividualPerformanceID__r.clofor_com_cfs__NOVPerformance__c</formula>
    <label>NOV PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>