force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/fields/clofor_com_cfs__SepGrossIncentives__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SepGrossIncentives__c</fullName>
    <formula>(clofor_com_cfs__SepPerformance__c - clofor_com_cfs__MinimumAmountForIncentive__c ) * clofor_com_cfs__SepBonusIncentiveRate__c</formula>
    <inlineHelpText>Sep Gross Incentives = Sep Bonus &amp; Incentives Rate*(Sep Performance-Minimum Amount for Incentives)</inlineHelpText>
    <label>SEP GROSS INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>