force-app/main/default/objects/clofor_com_cfs__BonusIncentivesCalculation__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EmployeeID__c</columns>
    <columns>clofor_com_cfs__AccumulatedIncentives__c</columns>
    <columns>clofor_com_cfs__JanGrossIncentives__c</columns>
    <columns>clofor_com_cfs__FebGrossIncentives__c</columns>
    <columns>clofor_com_cfs__MarGrossIncentives__c</columns>
    <columns>clofor_com_cfs__AprGrossIncentives__c</columns>
    <columns>clofor_com_cfs__MayGrossIncentives__c</columns>
    <columns>clofor_com_cfs__JunGrossIncentives__c</columns>
    <columns>clofor_com_cfs__JulGrossIncentives__c</columns>
    <columns>clofor_com_cfs__AugGrossIncentives__c</columns>
    <columns>clofor_com_cfs__SepGrossIncentives__c</columns>
    <columns>clofor_com_cfs__OctGrossIncentives__c</columns>
    <columns>clofor_com_cfs__NovGrossIncentives__c</columns>
    <columns>clofor_com_cfs__DecGrossIncentives__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>